--- a/santiago_papeleria_frontend/src/app/features/chatbot/components/chat-widget/chat-widget.component.html
+++ b/santiago_papeleria_frontend/src/app/features/chatbot/components/chat-widget/chat-widget.component.html
@@ -4,13 +4,12 @@
 <div class="chat-trigger">
     @if (!state.isOpen()) {
     <div class="chat-helper-badge" (click)="state.toggleChat()">
-        <span>¿Necesitas ayuda?</span>
         <span>👋</span>
     </div>
     }
 
     <button class="chat-button" (click)="state.toggleChat()">
-        <img src="https://res.cloudinary.com/dufklhqtz/image/upload/v1768923352/bot_avatar_h4ftod.jpg" alt="Chat">
+        <img src="https://res.cloudinary.com/dufklhqtz/image/upload/v1769628496/BOTFinal_kvbfdq.png" alt="Chat">
     </button>
 </div>
 
@@ -21,8 +20,7 @@
     <div class="chat-header">
         <div class="chat-header-info">
             <div class="chat-avatar">
-                <img src="https://res.cloudinary.com/dufklhqtz/image/upload/v1768923352/bot_avatar_h4ftod.jpg"
-                    alt="Bot">
+                <img src="https://res.cloudinary.com/dufklhqtz/image/upload/v1769628496/BOTFinal_kvbfdq.png" alt="Bot">
             </div>
             <div>
                 <h3 class="chat-title">Asistente Santiago</h3>
